focus icons + loc

--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -510,6 +510,15 @@ ROM_fund_the_viata_romaneasca:0 "Fund the Viata Româneasca"
 ROM_fund_the_viata_romaneasca_desc:0 "The Viata Româneasca is a socialist newspaper co-founded by Constantin Stere, used to promote socialist and poporanist ideals to the readers in Romania and other places. Now that Constantin is in charge of the government, he can fund the newspaper through his occupation."
 ROM_tax_burdens_on_the_rich:0 "Their Fair Share"
 ROM_protect_the_ports:0 "Protect the Ports"
+ROM_crush_radical_marxists:0 "Crush Radical Marxists"
+ROM_form_the_fppr:0 "Form the FPPR"
+ROM_allign_the_pdsr:0 "Aligh the PDSR"
+ROM_concessions_to_the_elites:0 "Concessions to the Elites"
+ROM_placate_the_peasants:0 "Placate the Peasants"
+ROM_carpist_renaissance:0 "The Carpist Renaissance"
+ROM_placate_the_king:0 "Placate the King"
+ROM_strong_arm_parliament:0 "Strong Arm Parliament"
+
 ## -- TOOLTIPS -- ##
 depends_on_idea_ROM_navy.tt:0 "§WDepending on which idea you picked in the previous focus, it will be §W§Gbuffed§G§W in this focus.§W"
 ROM_war_has_ended:0 "§WThis focus will be §W§Gautocompleted§G§W when the §W§YGreat War§Y§W ends"
