Riau-Lingga Sultanate

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -3236,6 +3236,13 @@
  AFA_communism_DEF:0 "the Revolutionary Democratic Union of Afar"
  AFA_neutrality:0 "Aussa"
  AFA_neutrality_DEF:1 "the Sultanate of Aussa"
+
+ RIA:0 "Riau-Lingga"
+ RIA_DEF:0 "Riau-Lingga"
+ RIA_ADJ:0 "Riau-Linggan"
+ RIA_democratic_DEF:0 "the Riau-Lingga Sultanate"
+ RIA_neutrality_DEF:0 "the Riau-Lingga Sultanate"
+ RIA_communism_DEF:0 "the People's Republic of Riau-Lingga"
  
  ### Debug Tag ###
  XXA:0 "Debug Tag"
