--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1907,6 +1907,7 @@
  VICTORY_POINTS_944: "Yenki" #延吉
  VICTORY_POINTS_1104: "Yantai" #延吉
  VICTORY_POINTS_4556: "Maseru"
+ VICTORY_POINTS_12113: "Tanjung Pinang"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
