--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -4,6 +4,8 @@
  leave_faction:0 "Leave Faction"
  sue_for_peace:0 "Sue for Peace"
  sue_for_peace_FROM:0 "Sue for Peace with [FROM.GetNameDef]"
+ annex_FROM:0 "Annex [FROM.GetNameDef]"
+
  ww1_claims_and_cores:0 "Claims and Cores"
  ww1_claims_and_cores_desc:0 "In the peace conference after the Great War, the victorious will be transferred with core states and claimed states from the defeatens, unless there is pre-scripted peace deal for the specific country or on the area."
  request_french_cannons:0 "Request French Cannons"
@@ -1776,7 +1778,6 @@
  CHI_JNC_attack_HNC:0 "Nanjing-Hunnan War"
  CHI_JNC_attack_QIN:0 "Second Revolution!"
  CHI_JNC_attack_QIN_desc:0 "It's time to end the Chinese monarchy!"
- CHI_SIK_annex_KUM:0 "Annex [KUM.GetNameDef]"
  CHI_KUM_call_support_from_XSM:0 "Call [XSM.GetName]"
  CHI_KUM_call_support_from_XSM_desc:0 "Revolt is underway. But to be successful, we need more help. Maybe we can use some help from [XSM.GetName]."
  CHI_SIK_call_sheng_shicai:0 "Call Sheng Shicai"
