--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1961,3 +1961,6 @@
  FIJ_neutrality_party:0 "Vunivalu"
 
  SAM_neutrality_party:0 "Mālietoa"
+
+ RIA_democratic_party:0 "Roesidijah Riouw"
+ RIA_neutrality_party:0 "Yang Dipertuan Muda Dynasty"
