--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -428,6 +428,7 @@ sokehs_rebbelion_ongoing:0 "The Sokehs Rebbelion is ongoing"
 GER_failed_haldane_mission:0 "The Haldane Mission has failed"
 GER_successful_haldane_mission:0 "The Haldane Mission was successful"
 GER_1912_budget:0 "Attempting to Pass a New Budget"
+GER_taken_mob_of_morale_focus:0 " Has taken a §YMobilisation of Morale§! focus in the past §Y70 days§!."
 
 #Tooltips
 ww1_germanytooltip1:0 "If Belgium accepts our proposal we can expect the profit to benefit our economy as a whole."
@@ -461,6 +462,10 @@ GER_establish_the_general_headquarters.tt:0 "Add §YOHL Command§!, which grants
 GER_politische_abteilung.tt:0 "Modify §YOHL Command§! by\n£political_power_texticon Daily Political Power Gain: §G+0.10§!\n£stability_texticon Stability §G+10.00%§!"
 GER_operationsabteilung.tt:0 "Modify §YOHL Command§! by\n£supply_consumption_texticon Supply Consumption: §G-10.00%§!\n£construction_speed_milfactory_texticon §YMilitary Factory§! construction speed: §G+5.00%§!"
 GER_zental_abteilung.tt:0 "Modify §YOHL Command§! by\n£mobilisation_texticon Mobilization Speed: §G+5.00%§!\n£planning_speed_texticon Planning Speed: §G+15.00%§!\n£planning_max_texticon Max Planning: §G+10.00%§!"
+
+#Mobilisation of Morale Tooltips
+GER_add_idea_mob_of_morale.tt:0 "Add §YMobilisation of Morale§!, which grants (£army_morale_texticon Division Recovery Rate: §G+5.00%§!, £organization_gain_texticon Army Organization Regain: §G+5.00%§!, £war_support_modifiericons_texticon  War Support: §G+2.50%§!, £political_power_cost_texticon Daily Political Power Cost: §R+0.05§!)."
+GER_modify_mob_of_morale.tt:0 "Modify §YMobilisation of Morale§! by\n£army_morale_texticon Division Recovery Rate: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£war_support_modifiericons_texticon  War Support: §G+2.50%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!"
 
 ww1_germanybundestrat:0 "When passed, the law will have the following effects:"
 
