famine paper money

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4934,7 +4934,36 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.154.t:0 "Blockade of the Eastern Mediterranea"
  ottoman.154.d:0 "Our main government's recent war decision have had some unintended consequences. Being naval powers, our enemies have started a blockade against the rest of our nation. As expected, the blockade is also affecting the regions under our command. Unless something is done against this blockade, it'll slowly starve our nation, including the regions under our commands."
  ottoman.154.a:0 "You should pray you're not starving- oh..."
-
+ ottoman.155.t:0 "German Grain Arrives to Syria"
+ ottoman.155.d:0 "As the Germans took effective control over the Ukrainian Steppes, the grain from the area has started to be imported to our empire to elevate the effects of the blockade. As a result, some of the negative effects of the blockade on the famine is being eased."
+ ottoman.155.a:0 "Toast to our German allies."
+ ottoman.156.t:0 "Agricultural Economic Model Proves its Successes"
+ ottoman.156.d:0 "As our empire has redirected its efforts to focus on its agricultural production, the over-reliance on foreign grain has also started to reduce. As a result, some of the negative effects of the blockade on the famine is being eased."
+ ottoman.156.a:0 "Only a focus on agriculture can save us from the famine."
+ ottoman.157.t:0 "Land Distribution Increased Agricultural Production"
+ ottoman.157.d:0 "As the recent land distribution let the farmers of our empire work in greater efficiency and more products, it has increased the benefits of the new agricultural model. As a result, some of the negative effects of the blockade on the famine is being eased."
+ ottoman.157.a:0 "With more lands to raise corps, we'll be able to feed our own population."
+ ottoman.158.t:0 "Local Producers Elevate the Effects of the Blockade"
+ ottoman.158.d:0 "As the local producers of our empire is being encouraged, the reliance on the foreign products also start to dim. As a result, some of the negative effects of the blockade on the famine is being eased."
+ ottoman.158.a:0 "Our hard working farmers will manage to put an end to this famine."
+ ottoman.159.t:0 "Agricultural Obligation Law Redirects Grain"
+ ottoman.159.d:0 "As Agricultural Obligation Law has been put into action, the increased grain production of the empire started to result in less reliance in foreign food stuff. As a result, some of the negative effects of the blockade on the famine is being eased."
+ ottoman.159.a:0 "State shall intervene and redirect grain to the region"
+ ottoman.160.t:0 "İaşe Nezareti's Actions Elevate the Famine"
+ ottoman.160.d:0 "Ministry of Food, established with the intention of feeding the population during war time scarcities, has showed its worth at the face of the enemy blockade. As a result, some of the negative effects of the blockade on the famine is being eased."
+ ottoman.160.a:0 "As our state intervenes to feed its citizens, we'll be saved from this famine."
+ ottoman.161.t:0 "Anatolian Grave Arrives to Syria"
+ ottoman.161.d:0 "As we're investing in the grain coming from Anatolia is redirected to Syria. As a result, some of the negative effects of the blockade on the famine is being eased."
+ ottoman.161.a:0 "Anatolian heartlands to the rescue of Syria."
+ ottoman.162.tt.1:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §R+2.0%§!\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y5.0%§!\n£stability_texticon  Stability: §R-2.00%§!\n£stability_texticon  Weekly Stability Gain: §R-2.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §R-2.00%§!\n\n"
+ ottoman.162.tt.2:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-2.0%§!\n\n"
+ ottoman.162.tt.3:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §R+5.0%§!\n£stability_texticon  Stability: §R-5.00%§!\n£stability_texticon  Weekly Stability Gain: §R-5.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §R-5.00%§!\n\n"
+ ottoman.162.tt.4:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-5.0%§!\n\n"
+ ottoman.162.t:0 "Paper Money Policy Backfires at the Face of Famine"
+ ottoman.162.d:0 "We've introduced the forced usage of paper money as a part of our centralization policies in Syria. Yet at the face of the famine, this policy greatly backfired. As the trust on the paper money plummeted, people either turned into black market or were deprived of basic food supplies as they lacked the means to purchase it."
+ ottoman.162.a:0 "Fixate paper money to gold money for the duration of the famine."
+ ottoman.162.b:0 "We can't turn away from our policies."
+ 
  ottoman_syria.1.t:0 "Küçük Cemal to Syria"
  ottoman_syria.1.d:0 "As the 4th army is being organized in Syria, governor responsible of the Syrian provinces [TRS.GetLeader] has requested the appointment of Mehmed Cemal Paşa. In order to provide a greater military presence in the region, Küçük Cemal Paşa will be appointed to Syria."
  ottoman_syria.1.a:0 "Safe trips Paşam."
