--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -972,7 +972,7 @@
  TUR_naval_blockade_dummy:0 "Naval Blockade"
  TUR_naval_blockade_dummy_desc:0 "The blockade of our enemies are proving to be a burden on our economy, effectively starving our nation."
  TUR_naval_blockade_dummy_instant_desc:0 "§Rif our overlord does not have the national spirit Naval Blockade, this national spirit will be removed§!"
- TUR_naval_blockade_dummy_tt:0 "[TUR_naval_blockade_dummy_monthly_population][TUR_naval_blockade_dummy_consumer_goods_factor][TUR_naval_blockade_dummy_stability_factor]\nEffects of this national spirit will be §Ymirrored by§! the effects of §YNaval Blockade§! on our §Yoverlord§!."
+ TUR_naval_blockade_dummy_tt:0 "[TUR_naval_blockade_dummy_monthly_population][TUR_naval_blockade_dummy_consumer_goods_factor][TUR_naval_blockade_dummy_stability_factor]Effects of this national spirit will be §Ymirrored by§! the effects of §YNaval Blockade§! on our §Yoverlord§!\n"
  TUR_naval_blockade_dummy_dm:0 "£pol_idea  Naval Blockade"
  TUR_naval_blockade_dummy_dm_desc:0 "The blockade of our enemies are proving to be a burden on our economy, effectively starving our nation."
  TUR_naval_blockade_dummy_monthly_population_yes:0 "£population_texticon  Monthly Population: [?TUR.TUR_nb_monthly_population|1+=%]\n"
@@ -1142,8 +1142,9 @@
  BUL_administrative_autonomy_desc:0 "This state has its own governing body, effectively making it autonomous in many matters."
  TUR_great_famine_of_syria:0 "Great Famine of Syria"
  TUR_great_famine_of_syria_desc:0 "War time scarcity combined with the drought of 1915 caused by the swarms of locusts has resulted in a famine that's threatening the survival of the Syrian people more than anything. Unless it's solved quickly, the famine will claim more lives"
- TUR_great_famine_of_syria_tt:0 "[TUR_great_famine_of_syria_supply_consumption_factor][TUR_great_famine_of_syria_stability_factor][TUR_great_famine_of_syria_stability_weekly_factor][TUR_great_famine_of_syria_war_support_weekly_factor]"
- TUR_great_famine_of_syria_supply_consumption_factor_yes:0 "£supply_consumption_texticon  Supply Consumption: [?global.TUR_gfs_supply_consumption_factor|1+=%]\n"
+ TUR_great_famine_of_syria_tt:0 "[TUR_great_famine_of_syria_supply_consumption_factor][TUR_great_famine_of_syria_consumer_goods_factor][TUR_great_famine_of_syria_stability_factor][TUR_great_famine_of_syria_stability_weekly_factor][TUR_great_famine_of_syria_war_support_weekly_factor]"
+ TUR_great_famine_of_syria_supply_consumption_factor_yes:0 "£supply_consumption_texticon  Supply Consumption: [?global.TUR_gfs_supply_consumption_factor|1-=%]\n"
+ TUR_great_famine_of_syria_consumer_goods_factor_yes:0 "£consumer_goods_texticon  Consumer Goods Factories factor: [?global.TUR_gfs_consumer_goods_factor|.1%Y]\n"
  TUR_great_famine_of_syria_stability_factor_yes:0 "£stability_texticon  Stability: [?global.TUR_gfs_stability_factor|=2%+]\n"
  TUR_great_famine_of_syria_stability_weekly_factor_yes:0 "£stability_texticon  Weekly Stability Gain: [?global.TUR_gfs_stability_weekly_factor|=2%+]\n"
  TUR_great_famine_of_syria_war_support_weekly_factor_yes:0 "£war_support_modifiericons_texticon  Weekly War Support Gain: [?global.TUR_gfs_war_support_weekly_factor|=2%+]\n"
