--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4963,6 +4963,14 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.162.d:0 "We've introduced the forced usage of paper money as a part of our centralization policies in Syria. Yet at the face of the famine, this policy greatly backfired. As the trust on the paper money plummeted, people either turned into black market or were deprived of basic food supplies as they lacked the means to purchase it."
  ottoman.162.a:0 "Fixate paper money to gold money for the duration of the famine."
  ottoman.162.b:0 "We can't turn away from our policies."
+ ottoman.163.t:0 "War Tax Puts Burden on Syrians"
+ ottoman.163.d:0 "As we've introduced prior to the famine, we were aiming at financially supplying our war effort through our citizen's pockets. Yet with the famine in Syria, it only worked towards worsening the conditions. As taxes proven to be a burden on our citizens, it especially resulted in increased hardships in Syria."
+ ottoman.163.a:0 "Who could've guessed"
+ ottoman.163.tt.1:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §R+7.0%§!\n£stability_texticon  Stability: §R-7.00%§!\n£stability_texticon  Weekly Stability Gain: §R-7.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §R-7.00%§!\n\n"
+ ottoman.163.tt.2:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-7.0%§!\n\n"
+ ottoman.164.t:0 "Loyal Merchant Class Profiteers from the Famine"
+ ottoman.164.d:0 "The attempt at the creation of a loyal merchant class was intended to create a loyal group of people capable of supplying the people our nation with necessary products. Yet at the face of the famine in Syria, the very supposed loyal merchants directed at the black market to earn some profits. As food supplies are in scarcity, many of our Syrian citizens moved towards the black market."
+ ottoman.164.a:0 "Being loyal has its perks I guess."
  
  ottoman_syria.1.t:0 "Küçük Cemal to Syria"
  ottoman_syria.1.d:0 "As the 4th army is being organized in Syria, governor responsible of the Syrian provinces [TRS.GetLeader] has requested the appointment of Mehmed Cemal Paşa. In order to provide a greater military presence in the region, Küçük Cemal Paşa will be appointed to Syria."
