sharifian revolt effect

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4971,6 +4971,12 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.164.t:0 "Loyal Merchant Class Profiteers from the Famine"
  ottoman.164.d:0 "The attempt at the creation of a loyal merchant class was intended to create a loyal group of people capable of supplying the people our nation with necessary products. Yet at the face of the famine in Syria, the very supposed loyal merchants directed at the black market to earn some profits. As food supplies are in scarcity, many of our Syrian citizens moved towards the black market."
  ottoman.164.a:0 "Being loyal has its perks I guess."
+ ottoman.165.t:0 "Sharifian Revolt Forces our Hand"
+ ottoman.165.d:0 "As the Sharifian revolt is threatening large scale uprisings in our Arap lands, several tribes left in the frontlines poses threat to our military capabilites. In order to secure the loyalty of the Bedouin tribes, we have to provide them with sufficient amounts of food for them. If not, they might switch sides in the conflict."
+ ottoman.165.a:0 "We can't afford to loose their loyalties."
+ ottoman.165.b:0 "Our citizens have priority."
+ ottoman.165.tt.1:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §R+3.0%§!\n£stability_texticon  Stability: §R-3.00%§!\n£stability_texticon  Weekly Stability Gain: §R-3.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §R-3.00%§!\n\n"
+ ottoman.165.tt.2:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-3.0%§!\n\n"
  
  ottoman_syria.1.t:0 "Küçük Cemal to Syria"
  ottoman_syria.1.d:0 "As the 4th army is being organized in Syria, governor responsible of the Syrian provinces [TRS.GetLeader] has requested the appointment of Mehmed Cemal Paşa. In order to provide a greater military presence in the region, Küçük Cemal Paşa will be appointed to Syria."
