Hollweg War-time tree

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -570,6 +570,22 @@ GER_establishing_the_foreign_armies:0 "Establish the Foreign Armies"
 GER_blitzproduktion:0 "Blitzproduktion"
 GER_victory_economics:0 "Victory Economics"
 
+#Hollweg War Time Tree
+GER_the_war_hawk_chancellor:0 "The War Hawk Chancellor"
+GER_obscuring_our_defeats:0 "Obscure our Defeats"
+GER_secure_loyalty_of_unions:0 "Secure the loyalty of Unions"
+GER_concessions_to_spd:0 "Concessions to the SPD"
+GER_restoration_of_belgium:0 "Restoration of Belgium"
+GER_commiting_to_the_september_programme:0 "Commiting to the September Programme"
+GER_the_enabling_act:0 "The Enabling Act"
+GER_keeping_the_bundestrat_in_check:0 "Keeping the Bundestrat in Check"
+GER_burgfriedenspolitik_successful:0 "Burgfriedenspolitik Successful"
+GER_the_price_of_italy:0 "The Price of Italy"
+GER_defeating_tirpitz:0 "Defeating Tirpitz"
+GER_reperations_to_the_americans:0 "Reperations to the Americans"
+GER_the_coalition_forgotten:0 "The Coalition Forgotten"
+GER_endorse_hindenburg:0 "Endorse Hindenburg"
+
 #Bundesrat
 GER_bundesrat_category: "Bundesrat"
 
