romanian hungarian war fix

--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -631,7 +631,7 @@ ROM_armistice_of_focsani:0 "The Armistice of Focsani has been signed. Romania no
 ROM_armistice_of_focsani.tt:0 "§WWhite Peace with the §W§YCentral Powers§Y§W.\nBulgaria will become the owner of the Southern Territories, like Mangalia and Southern Dobruja. Austria will occupy South Bukovina."
 ROM_more_likely_if_thing.tt:0 "§WThey will be §Y§Gmore likely§G§W to accept if:\n- Has a high opinion of us\n- Is in a faction with us\n- Is fighting a war together"
 ROM_tbotr.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£consumer_goods_texticon Consumer Goods factor: §Y-10.0%§!\n£construction_speed_texticon Construction Speed: §R-5.00%§!\n£political_power_cost_texticon Daily Political Power Cost: §G-0.15§!"
-
+ROM_has_war_hungarian.tt:0 "§WThis focus will be §W§Gautocompleted§G§W once the Romanian-Hungarian war starts.§W"
 
 ### -- EVENTS -- ##
 ww1_developer_note.88.t:0 ""
@@ -964,7 +964,12 @@ ww1_romania.100.t:0 "[ROM.GetName] asks for [764.GetName]"
 ww1_romania.100.d:0 "[ROM.GetName] asks for [764.GetName] after they failed to obtain it from the Paris Peace Conference."
 ww1_romania.100.a:0 "We don't need it."
 ww1_romania.100.b:0 "What the hell?"
-
+ww1_romania.101.t:0 "They refuse to give up [764.GetName]!"
+ww1_romania.101.d:0 "They came out with a statement to our embassy that they will not give us our rightful land."
+ww1_romania.101.a:0 "To war!"
+ww1_romania.102.t:0 "They give up [764.GetName]"
+ww1_romania.102.d:0 "They came out with a message stating that they agree that they have no rightful claim to [764.GetName] and that it is ours."
+ww1_romania.102.a:0 "Too easy."
 ## -- IDEAS -- ##
 ROM_unionist_zeal:0 "Unionist Zeal"
 ROM_unionist_zeal_desc:0 "Ever since the unification in 1859 the dream of reuniting the romanian people from both sides of the Carphatians and those from over the Prut river has been the nation's dream, a Romania for romanians."
