great famine of mount lebanon

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4506,8 +4506,8 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.47.t:0 "Blockade of the Eastern Mediterranea"
  ottoman.47.d:0 "Our recent war decision have had some unintended consequences. Being naval powers, our enemies have started a blockade against our nation. Unless something is done against this blockade, it'll slowly starve our nation."
  ottoman.47.a:0 "You should pray you're not starving- oh..."
- ottoman.48.t:0 "The Great Famine of Mount Lebanon"
- ottoman.48.d:0 "War time years are indeed no exception to scarcity of resources. While this has been the case for all across our empire, not only Mount Lebanon but whole of Syria is struct with an exceptional case. A a swarm of locusts devoured the crops in Syria, resulting in vast food shortages. As an unsuccessful harvest season combined with the war time conditions, it resulted in an all out famine.\nWhile the famine is a devastating event, it's nothing the glorious Ottoman state can't deal with. Yet other factors, both domestic and external, could very well lead to the situation spiral out of control."
+ ottoman.48.t:0 "The Great Famine of Syria"
+ ottoman.48.d:0 "War time years are indeed no exception to scarcity of resources. While this has been the case for all across our empire, Syria is struct with an exceptional case. A a swarm of locusts devoured the crops in Syria, resulting in vast food shortages. As an unsuccessful harvest season combined with the war time conditions, it resulted in an all out famine.\nWhile the famine is a devastating event, it's nothing the glorious Ottoman state can't deal with. Yet other factors, both domestic and external, could very well lead to the situation spiral out of control."
  ottoman.48.a:0 "We should deal with it as soon as possible."
  ottoman.48.tt:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-10.0%§!\n\n"
  ottoman.49.t:0 "Aegean Crisis"
@@ -4977,6 +4977,10 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.165.b:0 "Our citizens have priority."
  ottoman.165.tt.1:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §R+3.0%§!\n£stability_texticon  Stability: §R-3.00%§!\n£stability_texticon  Weekly Stability Gain: §R-3.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §R-3.00%§!\n\n"
  ottoman.165.tt.2:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-3.0%§!\n\n"
+ ottoman.166.t:0 "Great Famine of Mount Lebanon"
+ ottoman.166.d:0 "The autonomous structure of Mount Lebanon has been protecting it against the policies of our state and the disasters that stroke our empire alike. As famine in Syria is getting worse and worse every day, Mount Lebanon too got its fair share of the disaster. Yet the situation right now is no where near comparable to what's about to come. As the years old autonomous structure is undermined, the forces keeping Mount Lebanon stable has also been lifted. Due to this reason, Mount Lebanon is struck harder than any other province within our empire."
+ ottoman.166.a:0 "Allah is punishing those French collaborators."
+ ottoman.166.tt:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-50.0%§!\n\n"
  
  ottoman_syria.1.t:0 "Küçük Cemal to Syria"
  ottoman_syria.1.d:0 "As the 4th army is being organized in Syria, governor responsible of the Syrian provinces [TRS.GetLeader] has requested the appointment of Mehmed Cemal Paşa. In order to provide a greater military presence in the region, Küçük Cemal Paşa will be appointed to Syria."
