--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -66,7 +66,7 @@ ROM_research_investments:0 "Rural Research Investments"
 ROM_a_moral_romania.tt:0 "For every §Y8.00%§! §3Democratic§! support, this focus will give us:\nGain Base Stability: §G+1.50%§!.\nPolitical Power: §G+5§!.\n\nBecause of our current §3Democratic§! support, this focus will give:"
 ROM_new_elites.tt:0 "Tthe §YNational Spirit§! this focus grants will be strengthened at §Y50.00%§!, §Y60.00%§!, and §Y70.00%§! §3Democratic§! support"
 ROM_a_moral_romania_desc:0 "The past few corrupt administrations - both containing the PNL and the PC, have greatly lowered the faith of the people in Romanias government. We must strive to restore the Romanian peoples confidence in our government."
-no_happy_few:0 "Didn't accept Carols request to not undo land reform"
+no_happy_few:0 "Accepted Carol's request to not undo land reform"
 ROM_enpower_the_elites:0 "Empower The Elites"
 ROM_enpower_the_elites_desc:0 ""
 ROM_enpower_the_elites.tt:0 "For every §Y8.00%§! §3Democratic§! support, this focus will give us:\nPolitical Power: §G+5§!.\n\nBecause of our current §3Democratic§! support, this focus will give:"
