changes to rom-hun conflict

--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -518,7 +518,13 @@ ROM_placate_the_peasants:0 "Placate the Peasants"
 ROM_carpist_renaissance:0 "The Carpist Renaissance"
 ROM_placate_the_king:0 "Placate the King"
 ROM_strong_arm_parliament:0 "Strong Arm Parliament"
-
+ROM_victory_in_hungarian_war:0 "Victory against Hungary... again"
+ROM_rebuild_transylvania:0 "Rebuild Transylvania"
+ROM_ensure_hungarian_weakness:0 "Guarantee Hungarian Weakness"
+ROM_realisation_of_greater_romania:0 "Realize Greater Romania"
+ROM_promote_romanian_language:0 "Promote the Romanian Language"
+ROM_defeat_in_hungarian_war:0 "Defeat against Hungary"
+ROM_suppress_use_of_hungarian_in_szekelyfold:0 "Suppress Hungarian in [778.GetName]"
 ## -- TOOLTIPS -- ##
 depends_on_idea_ROM_navy.tt:0 "§WDepending on which idea you picked in the previous focus, it will be §W§Gbuffed§G§W in this focus.§W"
 ROM_war_has_ended:0 "§WThis focus will be §W§Gautocompleted§G§W when the §W§YGreat War§Y§W ends"
@@ -970,6 +976,10 @@ ww1_romania.101.a:0 "To war!"
 ww1_romania.102.t:0 "They give up [764.GetName]"
 ww1_romania.102.d:0 "They came out with a message stating that they agree that they have no rightful claim to [764.GetName] and that it is ours."
 ww1_romania.102.a:0 "Too easy."
+ww1_romania.103.t:0 "Should we annex more Hungarian land?"
+ww1_romania.103.d:0 "[HUN.GetName] has been defeated in their war with us, so the question is should we upset the Hungarians even more and take [154.GetName]?"
+ww1_romania.103.a:0 "Greater Romania's prophecy will be fullfilled!"
+ww1_romania.103.b:0 "On second thought..."
 ## -- IDEAS -- ##
 ROM_unionist_zeal:0 "Unionist Zeal"
 ROM_unionist_zeal_desc:0 "Ever since the unification in 1859 the dream of reuniting the romanian people from both sides of the Carphatians and those from over the Prut river has been the nation's dream, a Romania for romanians."
@@ -1036,10 +1046,12 @@ ROM_abandon_federalism_idea:0 "Abandon Federalism"
 ROM_1912_naval_program_idea:0 "[ROM.GetAdjective] Naval Program"
 ROM_defense_of_danube:0 "Defense of the Danube River"
 ROM_black_sea_fleet:0 "The Romanian Black Sea Fleet"
+ROM_defense_of_danube2:0 "Defense of the Danube River"
+ROM_black_sea_fleet2:0 "The Romanian Black Sea Fleet"
 ROM_anti_hungarian_propaganda_idea:0 "Anti-Hungarian Propaganda"
 ROM_recently_raided:0 "Recently Raided"
-
-
+ROM_promoted_romanian_language:0 "Promoted Romanian Language"
+ROM_unionist_zeal2:0 "Unionist Zeal"
 ## -- DECISIONS -- ##
 ROM_national_opposition:0 "National Opposition"
 ROM_national_opposition_desc:0 "Opposition to Carp is widespread across a majority of Romanias political sphere. If we are to avoid being ousted from power then we will need to isolate, ally, or destroy all factions standing in our way, before they do the same to us.\n\nThe §qOld Guard§! is currently: [old_guard_status]\n\nThe §rPDSR§! is currently: [pdsr_status]!\n\nThe §lPNL§! is currently: §Rorganized§! in complete §Ropposition§! to §YCarp§!\n\nThe §mPCD§! is currently: §Rorganized§!, with the vast majority standing in §Ropposition§! to §YCarp§!\n\nThe §Cpeasants§! are currently: [peasant_status]"
