--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -176,6 +176,9 @@
  ROM:0 "Romania"
  ROM_DEF:0 "Romania"
  ROM_ADJ:0 "Romanian"
+ ROM_greater:0 "Greater Romania"
+ ROM_greater_DEF:0 "The Kingdom of Greater Romania"
+ ROM_greater_ADJ:0 "Romanian"
  SWI_fascism:0 "Swiss Imperial Confederation"
  SWI_fascism_DEF:0 "the Swiss Imperial Confederation"
  SWI_democratic:0 "Switzerland"
