quick bug fixes

--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -633,12 +633,12 @@ kings_gov.tt:0 "This focus will be §Yautocompleted§! if King Carol appoints th
 kings_gov2.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YTitu Maiorescu§! of the §cPC§! to form a government"
 kings_gov3.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YBarbu Delavrancea§! of the §cPC§! to form a government"
 kings_gov4.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YConstantin Arion§! of the §cPC§! to form a government"
-ROM_armistice_of_focsani:0 "The Armistice of Focsani has been signed. Romania now exits the war."
+ROM_armistice_of_focsani:0 "White Peace [ROM.GetNameWithFlag] and [GER.GetNameWithFlag]"
 ROM_armistice_of_focsani.tt:0 "§WWhite Peace with the §W§YCentral Powers§Y§W.\nBulgaria will become the owner of the Southern Territories, like Mangalia and Southern Dobruja. Austria will occupy South Bukovina."
 ROM_more_likely_if_thing.tt:0 "§WThey will be §Y§Gmore likely§G§W to accept if:\n- Has a high opinion of us\n- Is in a faction with us\n- Is fighting a war together"
 ROM_tbotr.tt:0 "Modify §YRomanian Economy §Y§Wby:\n£consumer_goods_texticon Consumer Goods factor: §Y-10.0%§!\n£construction_speed_texticon Construction Speed: §R-5.00%§!\n£political_power_cost_texticon Daily Political Power Cost: §G-0.15§!"
 ROM_has_war_hungarian.tt:0 "§WThis focus will be §W§Gautocompleted§G§W once the Romanian-Hungarian war starts.§W"
-
+ROM_armistice_of_focsani_completed:0 "Signed the Armistice of Focsani"
 ### -- EVENTS -- ##
 ww1_developer_note.88.t:0 ""
 ww1_romania.78.t:0 "The 'Swamp' Demand Protection"
