--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1844,6 +1844,15 @@
  war_support_more_than_3:0 "£war_support §Y3§!"
  war_support_more_than_3_blocked:0 "£war_support §R3§!"
  war_support_more_than_3_tooltip:0 "It costs £war_support §Y3§! to take the decision"
+ infantry_equipment_more_than_500:0 "£infantry_equipment_text_icon §Y500§!"
+ infantry_equipment_more_than_500_blocked:0 "£infantry_equipment_text_icon §R500§!"
+ infantry_equipment_more_than_500_tooltip:0 "It costs £infantry_equipment_text_icon §Y500§! to take the decision"
+ infantry_equipment_more_than_300:0 "£infantry_equipment_text_icon §Y300§!"
+ infantry_equipment_more_than_300_blocked:0 "£infantry_equipment_text_icon §R300§!"
+ infantry_equipment_more_than_300_tooltip:0 "It costs £infantry_equipment_text_icon §Y300§! to take the decision"
+ train_more_than_5:0 "£train_texticon §Y5§!"
+ train_more_than_5_blocked:0 "£train_texticon §R5§!"
+ train_more_than_5_tooltip:0 "It costs £train_texticon §Y5§! to take the decision"
  CHI_decision_oppress_communists:0 "Oppress Communists"
  CHI_NPA_call_guizhou:0 "Call Guizhou"
  CHI_NPA_call_guizhou_desc:0 "If we ask Liu Xianshi, a hot shot in Guizhou to join the National Protection Movement, it will be of great help in the fight for our cause."
@@ -2798,10 +2807,10 @@
  TUR_dismiss_hamdullah_suphi_tanriover_tt:0 "Modify §YCommittee of Union and Progress§! by\n£population_texticon  Monthly Population: §R-2.5%§!\n£stability_texticon  Stability: §R-2.50%§!\n£research_speed_texticon  Research Speed: §R-1.50%§!\n\n"
  TUR_utilize_halide_edib_adivar:0 "Utilize [ROOT.TUR_halide_edib_adivar.GetName]"
  TUR_utilize_halide_edib_adivar_desc:0 "Though not an official part of the government, [ROOT.TUR_halide_edib_adivar.GetName] is an influential member of the committee. Her opinions shall influence the actions taken by the state."
- TUR_utilize_halide_edib_adivar_tt:0 "Modify §YCommittee of Union and Progress§! by\n£manpower_texticon  Recruitable Population Factor: §G5%§!\n£stability_texticon  Stability: §R-5.00%§!\n£war_support_modifiericons_texticon  War Support: §G+2.50%§!\n£research_speed_texticon  Research Speed: §G+2.50%§!\n\n"
+ TUR_utilize_halide_edib_adivar_tt:0 "Modify §YCommittee of Union and Progress§! by\n£manpower_texticon  Recruitable Population: §G5%§!\n£stability_texticon  Stability: §R-5.00%§!\n£war_support_modifiericons_texticon  War Support: §G+2.50%§!\n£research_speed_texticon  Research Speed: §G+2.50%§!\n\n"
  TUR_dismiss_halide_edib_adivar:0 "Dismiss [ROOT.TUR_halide_edib_adivar.GetName]"
  TUR_dismiss_halide_edib_adivar_desc:0 "[ROOT.TUR_halide_edib_adivar.GetName] has overstayed her welcome. It's time for him to be refrained from state affairs."
- TUR_dismiss_halide_edib_adivar_tt:0 "Modify §YCommittee of Union and Progress§! by\n£manpower_texticon  Recruitable Population Factor: §R-5%§!\n£stability_texticon  Stability: §G+5.00%§!\n£war_support_modifiericons_texticon  War Support: §R-2.50%§!\n£research_speed_texticon  Research Speed: §R-2.50%§!\n\n"
+ TUR_dismiss_halide_edib_adivar_tt:0 "Modify §YCommittee of Union and Progress§! by\n£manpower_texticon  Recruitable Population: §R-5%§!\n£stability_texticon  Stability: §G+5.00%§!\n£war_support_modifiericons_texticon  War Support: §R-2.50%§!\n£research_speed_texticon  Research Speed: §R-2.50%§!\n\n"
  TUR_utilize_cavid_bey:0 "Utilize [ROOT.TUR_cavid_bey.GetName]"
  TUR_utilize_cavid_bey_desc:0 "Though not an official part of the government, [ROOT.TUR_cavid_bey.GetName] is an influential member of the committee. His opinions shall influence the actions taken by the state."
  TUR_utilize_cavid_bey_tt:0 "Modify §YCommittee of Union and Progress§! by\n£construction_speed_texticon  Local Construction Speed: §G+2.50%§!\n£efficiency_growth_texticon  Production Efficiency growth: §G+5.00%§!\n£production_licence_cost_texticon  License purchase cost: §G-5%§!\n\n"
@@ -5443,8 +5452,6 @@
  TUR_increase_manastir_centralization_2:0 "Modify §YCentralization§! of §YManastır Vilayet§! by §G+2%§!\n"
  TUR_increase_yanya_centralization_2:0 "Modify §YCentralization§! of §YYanya Vilayet§! by §G+2%§!\n"
  TUR_increase_iskodra_centralization_2:0 "Modify §YCentralization§! of §Yİşkodra Vilayet§! by §G+2%§!\n"
- TUR_decision_cost_300_infantry_equipment:0 "£infantry_equipment_text_icon §Y300§!"
- TUR_decision_cost_300_infantry_equipment_blocked:0 "£infantry_equipment_text_icon §R300§!"
  TUR_improve_albanian_garrisons_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n"
  TUR_improve_albanian_garrisons:0 "Improve Albanian Garrisons in [FROM.GetName]"
  TUR_improve_albanian_garrisons_desc:0 "Albania has been experiencing high and frequent levels of rebellions in the past years. To safeguard our control in the region, we have to better equip our garrisons to show up a more effective force against the rebels."
@@ -5458,8 +5465,38 @@
  TUR_grant_autonomy_to_ahikerya:0 "Grant Autonomy to [975.GetName]"
  TUR_grant_autonomy_to_ahikerya_desc:0 "The recent Greek revolt in [975.GetName] has tightened our hands. Due to the georgaphical limitations, simply taking down the rebellion would take too much time. Simply granting the island autonomy would solve the problem."
  TUR_grant_autonomy_to_ahikerya_tt:0 "\nModify £ww1_game_rule_flag_GRE §YGreek Minority§! by\n£political_violence_texticon  Resistance Target: §G-100%§!\n\n"
-
-
+ TUR_reduce_great_famine_of_syria_150_days:0 "Reduce the duration of §YGreat Famine of Syria§! by §Y150 days§!.\n"
+ TUR_reduce_great_famine_of_syria_100_days:0 "Reduce the duration of §YGreat Famine of Syria§! by §Y100 days§!.\n"
+ TUR_reduce_great_famine_of_syria_50_days:0 "Reduce the duration of §YGreat Famine of Syria§! by §Y50 days§!.\n"
+ TUR_reduce_great_famine_of_syria_30_days:0 "Reduce the duration of §YGreat Famine of Syria§! by §Y30 days§!.\n"
+ TUR_deploy_soldiers_in_agriculture:0 "Deploy Soldiers in Agriculture"
+ TUR_deploy_soldiers_in_agriculture_desc:0 "Our starving population in Syria cannot work their lands in this situation. To assist them with harvest, we'll send some of our soldiers to assist them untill the famine is over."
+ TUR_deploy_soldiers_in_agriculture_tt1:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §G+3.0%§!\n£stability_texticon  Stability: §G+3.00%§!\n£stability_texticon  Weekly Stability Gain: §G+3.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §G+3.00%§!\n£manpower_texticon  Recruitable Population: §R-10%§!\n\n"
+ TUR_deploy_soldiers_in_agriculture_tt2:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+6.0%§!\n\n"
+ TUR_conscription_exceptions_for_tribes:0 "Conscription Exceptions for Tribes in [FROM.GetName]"
+ TUR_conscription_exceptions_for_tribes_desc:0 "Though it will result in a loss of centralization, giving conscription exceptions to tribes and letting them work their lands will create enough supplies to relieve the effects of the famine."
+ TUR_conscription_exceptions_for_tribes_tt1:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §G+1.0%§!\n£stability_texticon  Stability: §G+1.00%§!\n£stability_texticon  Weekly Stability Gain: §G+1.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §G+1.00%§!\n\n"
+ TUR_conscription_exceptions_for_tribes_tt2:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+5.0%§!\n\n"
+ TUR_conscription_exceptions_for_tribes_tt3:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+2.0%§!\n\n"
+ TUR_decrease_damascus_centralization_3:0 "Modify §YCentralization§! of §YDamascus Vilayet§! by §R-3%§!\n"
+ TUR_decrease_damascus_centralization_2:0 "Modify §YCentralization§! of §YDamascus Vilayet§! by §R-2%§!\n"
+ TUR_decrease_beirut_centralization_5:0 "Modify §YCentralization§! of §YBeirut Vilayet§! by §R-5%§!\n"
+ TUR_decrease_jerusalem_centralization_5:0 "Modify §YCentralization§! of §YJerusalem Vilayet§! by §R-5%§!\n"
+ TUR_decrease_deir_ez_zor_centralization_10:0 "Modify §YCentralization§! of §YDeir ez-Zor Vilayet§! by §R-10%§!\n"
+ TUR_voluntary_property_tax:0 "Voluntary Property Tax"
+ TUR_voluntary_property_tax_desc:0 "Though not much, every little initiative helps with relieving the famine. As we'll establish voluntary property tax, we'll be able to collect and divert what little resources we can to those in need."
+ TUR_voluntary_property_tax_tt1:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §G+2.0%§!\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y5.0%§!\n£stability_texticon  Stability: §G+2.00%§!\n£stability_texticon  Weekly Stability Gain: §G+2.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §G+2.00%§!\n\n"
+ TUR_voluntary_property_tax_tt2:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+4.0%§!\n\n"
+ TUR_divert_educated_populaton_to_deal_with_the_famine:0 "Divert Educated Population to Deal with the Famine"
+ TUR_divert_educated_populaton_to_deal_with_the_famine_desc:0 "Though a great majority of the educated population help us with educational and engineering fields, such drastic times call for drastic measures. We have to divert our educated population into dealing with the famine."
+ TUR_divert_transportation_for_civilian_use:0 "Divert Transportation for Civilian Use"
+ TUR_divert_transportation_for_civilian_use_desc:0 "Though a majority of the transportration and infrastructure is being used by our state and our army, diverting some of these materials for the civilian use could hep with the transport of food supplies into famine areas."
+ TUR_accept_american_help:0 "Accept [USE.GetAdjective] Aid"
+ TUR_accept_american_help_desc:0 "As the rest of the world observes the famine in Syria, several [USE.GetAdjective]s founded the Syrian–Mount Lebanon Relief Committee too collect funds and help those in Syria. Though accepting their help will certainly increase [USE.GetAdjective] influence over our country, their help will be nothing to be ignored."
+ TUR_accept_american_help_tt1:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §G+3.0%§!\n£stability_texticon  Stability: §G+3.00%§!\n£stability_texticon  Weekly Stability Gain: §G+3.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §G+3.00%§!\n\n"
+ TUR_distribute_grain_to_syria:0 "Distribute Grain to Syria"
+ TUR_distribute_grain_to_syria_desc:0 "As our empire is incapable of feeding itself, we need foreign supplies to relieve the famine in Syria. Through distributing foreign grains in the region, we'll be able to gradually feed our population and end the famine."
+ TUR_distribute_grain_to_syria_tt:0 "Does not have national spirit §YNaval Blockade§!\n"
 
  TUR_get_state_minority_effect:0 "Modify [TUR_get_state_minority] by\n"
  TUR_armenian_to_greek_minority:0 "Replace £ww1_flag_ARM  §YArmenian Minority§! with £ww1_game_rule_flag_GRE  §YGreek Minority§!\nEffective change:\n[TUR_minority_attrition_down][TUR_minority_army_defence_factor_down][TUR_minority_enemy_local_supplies_down][TUR_minority_recruitable_population_down]"
@@ -6109,7 +6146,7 @@
  TRS_establish_selahaddin_i_eyyubi_complex_tt:0 "Modify §YCrippling Illiteracy§! by\n£research_speed_texticon  Research Speed: §G+5.00%§!\n\n"
  TRS_expand_boarding_schools:0 "Expand Boarding Schools"
  TRS_expand_boarding_schools_desc:0 "As our empire has no shortage in orphans, they must be taken care of and educated in a way. Establishing boarding schools will allow us to both educate, and assimilate, these students."
- TRS_expand_boarding_schools_tt:0 "Modify §YCrippling Illiteracy§! by\n£population_texticon  Monthly Population: §R-3.0%§!\n£manpower_texticon  Recruitable Population Factor: §R-1%§!\n£research_speed_texticon  Research Speed: §G+3.00%§!\n\n"
+ TRS_expand_boarding_schools_tt:0 "Modify §YCrippling Illiteracy§! by\n£population_texticon  Monthly Population: §R-3.0%§!\n£manpower_texticon  Recruitable Population: §R-1%§!\n£research_speed_texticon  Research Speed: §G+3.00%§!\n\n"
  TRS_school_of_agriculture:0 "School of Agriculture"
  TRS_school_of_agriculture_desc:0 "Our citizens in the provinces under our control lacks the knowledge to properly use modern equipment for agriculture. If we teach them how to use them, it will result in increased experties and more efficient equipment usage."
  TRS_school_of_agriculture_tt:0 "Modify §YCrippling Illiteracy§! by\n£research_speed_texticon  Research Speed: §G+2.00%§!\n£factory_output_texticon  Factory Output: §G+7.00%§!\n\n"
@@ -6590,10 +6627,6 @@
  TUR_integrating_egypt_vilayet:0 "Integrating Egypt Vilayet"
  TUR_reform_the_african_administration_decision:0 "Reform African Administration"
  TUR_strip_mount_lebanons_autonomy:0 "Strip @LEB Mount Lebanon's Autonomy"
- TUR_infantry_equipment_cost_500:0 "£infantry_equipment_text_icon §Y500§!"
- TUR_infantry_equipment_cost_500_blocked:0 "£infantry_equipment_text_icon §R500§!"
- TUR_infantry_equipment_cost_300:0 "£infantry_equipment_text_icon §Y300§!"
- TUR_infantry_equipment_cost_300_blocked:0 "£infantry_equipment_text_icon §R300§!"
  TUR_increase_garrison_in_anatolia:0 "Increase Garrisons in Anatolia"
  TUR_increase_garrison_in_caucasus:0 "Increase Garrisons in Caucasus"
  TUR_increase_garrison_in_thrace:0 "Increase Garrisons in Thrace"
@@ -6794,8 +6827,6 @@
  TUR_integrate_trablusgarp_decision:0 "Integrate Trablusgarp"
  TUR_crush_egyptian_rebels:0 "Crush Egyptian Rebels"
  TUR_expanding_african_administration_decision:0 "Expanding African Administration"
- TUR_decision_cost_15commandpower:0 "£command_power §Y15§!"
- TUR_decision_cost_15commandpower_blocked:0 "£command_power §R15§!"
  TUR_extermination_of_our_people:0 "Repression of our People"
  TUR_extermination_of_our_people2:0 "Repression of our People"
  TUR_revoke_the_autonomy_of_sharifate_of_mecca:0 "Revoke the Autonomy of Sharifate of Mecca"
